--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,91 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.layout {
+  width: 85%;
+  margin: 0 auto;
+}
+.header {
+  display: flex;
+  height: 132px;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  border-bottom: 2px solid black;
+  margin-bottom: 35px;
+}
+
+.header .logo{
+flex-grow: 2;
+display: flex;
+}
+.header .logo span{
+  display: block;
+  font-size: 90px;
+  font-weight: bolder;
+  margin-top: -8px;
+}
+
+.header .logo h3{
+  display: block;
+  flex-basis: 40px;
+  margin-left: 10px;
+  font-weight: 300;
+  text-transform: uppercase;
+}
+.header nav{
+flex-grow: 1;
+display: flex;
+}
+
+.header nav ul{
+  display: flex;
+  justify-content: center;
+  
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  
+  }
+  .header li{
+    text-transform: uppercase;
+    font-size: 16px;
+    font-weight: bold;
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+.header li a{
+  text-decoration: none;
+  color: black;
+  transition: all 500ms;
+}
+
+header a:hover{
+  color: #fa4529;
+}
+
+.footer {
+  text-align: center;
+  font-size: 14px;
+  margin-top: 35px;
+  padding: 45px;
+  border-top: 3px solid black;
+  min-height: 150px;
+  line-height: 120px;
+  background: #f5f5f5;
+  color: #f444;
+}
+.content {
+  min-height: 400px;
 }
